# Quant-Swing-Trading-NSE

./: .env.example  README.md  pyproject.toml
.github/workflows/: daily_trader.yml
archive/: backtest_circuit_breaker.py  backtest_circuit_breaker_timed.py  backtest_entry_cap.py  backtest_fixed_vs_dynamic.py  backtest_regime_filter.py  backtest_symbol_momentum.py  backtest_vix_filter.py  sensitivity_analysis.py  sensitivity_train_test.py  simulate_combinations.py
configs/: nifty50.yaml
reports/: bb_squeeze_results.json  optimal_long_only_portfolio.json  optimal_ma_pullback_portfolio.json
scripts/: analyze_first_hour_momentum.py  analyze_orb_report.py  backtest_bb_squeeze.py  backtest_black_swan.py  backtest_top_3_pairs.py  download_zerodha_historical.py  live_order_pilot.py  master_sweeper.py  resample_to_daily.py  run_10yr_master_backtest.py  run_bb_squeeze_trader.py  run_first_hour_momentum_backtest.py  run_gap_continuation_backtest.py  run_ma_pullback_trader.py  run_master_trader.py  run_pairs_backtest.py  run_paper_live_zerodha.py  run_paper_trader.py  run_supertrend_trader.py  run_vwap_backtest.py  scan_pairs_cointegration.py  sweep_black_swan_params.py  sweep_first_hour_momentum_params.py  sweep_gap_continuation_params.py  sweep_long_only_params.py  sweep_ma_pullback_params.py  sweep_pairs_params.py  sweep_rsi2_params.py  sweep_supertrend_params.py  sweep_vwap_params.py  validate_first_hour_symbol_specific.py  zerodha_auto_login.py
src/trading_engine/: strategy_priority.py
tests/unit/: test_broker_zerodha.py  test_config.py
(+49 files in other folders)
