[project]
name = "stock-trading-engine"
version = "0.1.0"
description = "Personal Zerodha-connected stock trading engine starter kit"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pandas>=2.0",
  "numpy>=1.26",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "streamlit>=1.30",
  "kiteconnect>=5.0",
  "pyarrow>=14.0",
  "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
